--- a/class_git/portafolio.html
+++ b/class_git/portafolio.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTAFOLIO</title>
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
     <h1>DEVELOP JORGE URETA</h1>
     <h2>SOY PROGRAMADOR ESTUDIANDO Y CRECIENDO</h2>
-    <P>ME GUSTA COMO HOBBY JUGAR FUTBOL</P>
+    <P>ME GUSTA COMO HOBBY JUGAR  AL FUTBOL</P>
 </body>
 </html>
